compiler/test/fail_compilation/e15876_3.d
/*
TEST_OUTPUT:
---
fail_compilation/e15876_3.d(9): Error: unexpected `(` in declarator
fail_compilation/e15876_3.d(9): Error: basic type expected, not `=`
fail_compilation/e15876_3.d(10): Error: found `End of File` when expecting `(`
---
*/
d(={for
